[gd_scene load_steps=6 format=3 uid="uid://dci7lnxcs8oxt"]

[ext_resource type="Script" uid="uid://gfkd4bk75v0w" path="res://scenes/growing_tree/growing_tree.gd" id="1_83m1v"]
[ext_resource type="Resource" uid="uid://bpivm2ikmxt15" path="res://scenes/growing_tree/tree_param.tres" id="2_2jc1w"]
[ext_resource type="PackedScene" uid="uid://7mtetmy3pu5k" path="res://scenes/growing_tree/growing_branch.tscn" id="2_yvbsd"]
[ext_resource type="Script" uid="uid://dm5ujht82i2ps" path="res://scenes/growing_tree/branch_param.gd" id="4_0hmoe"]

[sub_resource type="Resource" id="Resource_oslwq"]
resource_local_to_scene = true
script = ExtResource("4_0hmoe")
resolution = 1
max_length = 500
min_width = 10
max_width = 500
max_nb_sub_branches = 10
base_angle = 0.0
max_absolute_angle = 1.5708
max_curve = 0.785398

[node name="GrowingTree" type="Node2D"]
script = ExtResource("1_83m1v")
param = ExtResource("2_2jc1w")

[node name="Branches" type="Node2D" parent="."]

[node name="Trunk" parent="Branches" instance=ExtResource("2_yvbsd")]
unique_name_in_owner = true
param = SubResource("Resource_oslwq")

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="GrowthTimer" to="." method="_on_growth_timer_timeout"]
